--- a/src/content/creatures/dummy.mdx
+++ b/src/content/creatures/dummy.mdx
@@ -4,13 +4,14 @@ source: MM
 size: s
 type: конструкция
 subtype: кукла
-alignment: tn
+alignment: cg
 cr: 1/2
 ac:
   value: 17
   source: кожаный доспех
 hp:
   value: 7
+  max: 12
   formula: 2d6
 speed:
   walk: 30
@@ -29,7 +30,7 @@ skills:
   acr: 1
   his: 2
 senses:
-  perception: 2
+  perception: 12
   darkvision: 30
 languages: общий, гоблинский
 dv: список уязвимостей
