--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -11,6 +11,17 @@ description: 'D&D и Настольные Ролевые Игры – Стать
 
 На этом сайте мы выкладываем как свои материалы, так и переводные и прочие статьи других авторов, преследуя цель обеспечить читателям доступ ко всей необходимой информации в одном месте.
 
+## Наша команда
+
+Главный Дон Кихот сообщества - Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом.
+Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор"
+
+Его главный Санчо - Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
+
+
+
+
+
 <Aside>
 
 Сейчас мы переводим несколько книг англоязычных авторов, продолажем работу над переводом SRD 5.1 и готовим свои материалы, которые расширяют базовое SRD.
