--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -13,10 +13,18 @@ description: 'D&D и Настольные Ролевые Игры – Стать
 
 ## Наша команда
 
-Главный Дон Кихот сообщества - Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом.
+Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом.
 Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор"
 
-Его главный Санчо - Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
+Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
+
+Роман "JunkTurkey" Зверев 
+
+Ира "Featon" Кузюр
+
+Станислав "Drakzar" Иванов
+
+
 
 
 
