--- a/src/content/singles/homebrew.mdx
+++ b/src/content/singles/homebrew.mdx
@@ -1,22 +1,40 @@
 ---
-title: E5E
-description: 'Lorem ipsum dolor sit amet'
+title: Проекты Киборгов и Чародеев
+description: 'Проекты и материалы, созданные Киборгами и Чародеями'
 ---
 
-Décor d'athlete véritable mais coeur vécu «la. Ce douleur morceau qu'elle lits genre ce haut, qu'elle surtout abondent tant dans mais.
+## COre d20 RPG (Бывший E5E)
 
-<Aside>
+Core d20 RPG - это проект по написанию набора правил совместимых с D&D 5e на основе SRD 5.1 и OGL материалов, который будет бесплатен для распространения.
 
-### Aside! Wow!
+## Старые материалы по Лиге Авантюристов
 
-Cared hight the awake found ungodly not, yea the could dwell him, in sore can flee to pride his felt these. To to his he parasites seraphs.
+Старые материалы по Лиге Авантюристов, которые размещены online
 
-</Aside>
+### Коллекция предысторий Лиги Авантюристов
 
-<Aside v="crimson">
+Собрание предысторий, которые можно использовать в играх Лиги. Русская и английская версии.
 
-### Warning! Scarry!
+### Бестиарий Лиги
 
-Cared hight the awake found ungodly not, yea the could dwell him, in sore can flee to pride his felt these. To to his he parasites seraphs.
+Собрание уникальных статблоков из Лиги Авантюристов (незаконченное)
 
-</Aside>
+## Материалы размещенные на dmsguild.com
+
+Все наши материалы размещенные в Гильдии Мастеров.
+
+## Материалы размещенные на drivethrurpg.com
+
+Все наши материалы опубликованные на Drivethrurpg.com
+
+## Прочие наши материалы и Проекты
+
+### Руководство по Roll20
+
+### Руководство по Foundry
+
+### Бестиарии на critter.db
+
+### Описание сеттингов на World Anvil
+
+## Прочие наши ресурсы
