--- a/src/content/singles/homebrew.mdx
+++ b/src/content/singles/homebrew.mdx
@@ -1,6 +1,6 @@
 ---
 title: Проекты Киборгов и Чародеев
-description: 'Проекты и материалы, созданные Киборгами и Чародеями'
+description: Проекты и материалы, созданные Киборгами и Чародеями
 ---
 
 ## COre d20 RPG (Бывший E5E)
