--- a/src/content/posts/articles/enhanced-shields.mdx
+++ b/src/content/posts/articles/enhanced-shields.mdx
@@ -1,7 +1,7 @@
 ---
-title: [Core d20 RPG] Расширенные правила по щитам
-description: Расширенные правила по щитам для Core d20 RPG
-date: 2023-05-05
+title: "[Core d20 RPG] Расширенные правила по щитам"
+description: "Расширенные правила по щитам для Core d20 RPG"
+date: "2023-05-05"
 tags: 
   - "5e"
   - "core-d20-rpg"
@@ -10,6 +10,7 @@ tags:
   - "снаряжение"
   - "щиты"
 ---
+
 
 Эта статья посвящена правилам по щитам в рамках нашего проекта Core d20 RPG.
 
