--- a/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
+++ b/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
@@ -25,7 +25,9 @@ tags:
 
 Точно так же не требуйте бросков для простых задач. Персонаж 5e с экспертизой может иметь бонус до +17 и не сможет провалить проверку навыка КС 15, поэтому нет необходимости делать бросок. Персонаж, пытающийся завязать шнурки на собственной обуви, не может потерпеть неудачу, поэтому нет необходимости делать бросок. Менее интуитивно, персонаж, который пытается взломать замок и не ограничен во времени, не может правдоподобно потерпеть неудачу. Если ничто не мешает им пытаться снова и снова, пока игрок не выбросит достаточно высокий результат, чтобы добиться успеха, тогда вообще не утруждайте себя бросками. Персонаж, которому нужно взломать замок быстро или  тихо , или  не сломав хрупкие импровизированные отмычки, должен совершить проверку навыка и сделать бросок кости к20. Персонаж, который не заботится о скорости или шуме и использует правильные воровские инструменты, не заботится об этом.
 
+<Aside v="crimson">
 Примечание: «штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую первого человека, если взлом был шумный.
+</Aside>
 
 ## 3: Обычно достаточно одного броска
 
@@ -39,6 +41,6 @@ tags:
 
 ## 5: Дифференцируйте подходы по их последствиям
 
-Подумайте об охраннике, которого партия должна обойти. Они решили не нападать на него, поэтому мы используем проверки навыков. Очевидными навыками для использования являются Обман, Убеждение, Запугивание или Скрытность. Вы можете просто решить, что этот охранник — парень со КС 15, и позволить группе делать то, в чем они лучше всего, и надеяться на лучшее, но гораздо интереснее дать разным вариантам разные последствия. Если вы потерпите неудачу в Запугивании или Обмане, охранник может стать враждебным. Если вы потерпите неудачу в Скрытности, охранник почти наверняка станет враждебным. Попытка уговорить охранника, которого вы никогда не встречали, пропустить вас (Убеждение), будет намного сложнее. Вы можете добавить взятку, чтобы снизить сложность, но теперь есть вероятность, что он разозлится, если вы потерпите неудачу, а если вы добьетесь успеха, вам придется заплатить взятку. Даже такое относительно простое столкновение может быть намного интереснее, чем просто выбор соответствующего навыка с наибольшим бонусом.
+Подумайте об охраннике, которого партия должна обойти. Они решили не нападать на него, поэтому мы используем проверки навыков. Очевидными навыками для использования являются Обман, Убеждение, Запугивание или Скрытность. Вы можете просто решить, что этот сложность взаимодействия с этим охранником имеет КС 15, и позволить группе делать то, в чем они лучше всего, и надеяться на лучшее, но гораздо интереснее дать разным вариантам разные последствия. Если вы потерпите неудачу в **Запугивании** или **Обмане**, охранник может стать враждебным. Если вы потерпите неудачу в **Скрытности**, охранник почти наверняка станет враждебным. Попытка уговорить охранника, которого вы никогда не встречали, пропустить вас (**Убеждение**), будет намного сложнее. Вы можете добавить взятку, чтобы снизить сложность, но теперь есть вероятность, что он разозлится, если вы потерпите неудачу, а если вы добьетесь успеха, вам придется заплатить взятку. Даже такое относительно простое столкновение может быть намного интереснее, чем просто выбор соответствующего навыка с наибольшим бонусом.
 
 Обсудить эти советы вы можете у нас в телеграмме или дискорде.
