Chore: Update deps & Format

--- a/src/content/posts/articles/core-d20-rpg-classes.mdx
+++ b/src/content/posts/articles/core-d20-rpg-classes.mdx
@@ -3,13 +3,13 @@ title: Классы в Core d20 RPG
 description: Описание классов используемых в Core d20 RPG
 date: 05-05-2023
 tags:
-- "Core d20 RPG" 
-- "E5E"
-- "Классы"
-- "Боец"
-- "Плут"
-- "Клерик"
-- "Волшебник"
+  - 'Core d20 RPG'
+  - 'E5E'
+  - 'Классы'
+  - 'Боец'
+  - 'Плут'
+  - 'Клерик'
+  - 'Волшебник'
 ---
 
 # Классы в Core d20 RPG
@@ -17,4 +17,3 @@ tags:
 В базовых правилах Core d20 RPG мы рассматриваем 4 базовых класса - Боец, Клерик, Плут, Волшебник. Все остальные классы относятся к дополнительным и будут представлены в отдельном буклете.
 
 Описание каждого класса включает описание его особенностей, владений навыками и спасбросками, быстрое создание персонажа 1-ого уровня и несколько подклассов.
-
