--- a/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
+++ b/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
@@ -1,17 +1,14 @@
 ---
-title: "Пять советов мастеру, про то как совершать проверки навыков и характеристик"
-description: "Пять советов мастеру, про то как совершать проверки навыков и характеристик в D&D 5e и не только"
-date: "2023-05-07"
-tags: 
-  - "5e"
-  - "core-d20-rpg"
-  - "совет ГМу"
-  - "проверка навыков"
-  - "проверка характеристик"
+title: 'Пять советов мастеру, про то как совершать проверки навыков и характеристик'
+description: 'Пять советов мастеру, про то как совершать проверки навыков и характеристик в D&D 5e и не только'
+date: '2023-05-07'
+tags:
+  - '5e'
+  - 'core-d20-rpg'
+  - 'совет ГМу'
+  - 'проверка навыков'
+  - 'проверка характеристик'
 ---
-
-
-
 
 Проверки навыков часто плохо обрабатываются в настольных ролевых играх, что может привести к скучным результатам и восприятию навыков как неинтересного и утомительного способа разрешения конфликтов. Тем не менее, если вы прислушаетесь к этим пяти советам, то использовать проверки навыков на игре станет намного интереснее.
 
@@ -23,17 +20,22 @@ tags:
 
 Почти все возможно с достаточно высоким броском навыка, но многое невозможно с бонусами навыков, которые на самом деле есть у персонажей. Навык «Убеждение» — это не «Доминирование над человеком», а навык «Атлетика» — это не скорость взбирания, поэтому есть люди, которых нельзя убедить делать определенные вещи, и некоторые поверхности, на которые нельзя взобраться с проверкой навыка, доступной для игровых персонажей. Не бросайте кубики в ситуациях, когда успех невозможен даже при выпадении 20.
 
-Точно так же не требуйте бросков для простых задач. Персонаж 5e с экспертизой может иметь бонус до +17 и не сможет провалить проверку навыка КС 15, поэтому нет необходимости делать бросок. Персонаж, пытающийся завязать шнурки на собственной обуви, не может потерпеть неудачу, поэтому нет необходимости делать бросок. Менее интуитивно, персонаж, который пытается взломать замок и не ограничен во времени, не может правдоподобно потерпеть неудачу. Если ничто не мешает им пытаться снова и снова, пока игрок не выбросит достаточно высокий результат, чтобы добиться успеха, тогда вообще не утруждайте себя бросками. Персонаж, которому нужно взломать замок быстро или  тихо , или  не сломав хрупкие импровизированные отмычки, должен совершить проверку навыка и сделать бросок кости к20. Персонаж, который не заботится о скорости или шуме и использует правильные воровские инструменты, не заботится об этом.
+Точно так же не требуйте бросков для простых задач. Персонаж 5e с экспертизой может иметь бонус до +17 и не сможет провалить проверку навыка КС 15, поэтому нет необходимости делать бросок. Персонаж, пытающийся завязать шнурки на собственной обуви, не может потерпеть неудачу, поэтому нет необходимости делать бросок. Менее интуитивно, персонаж, который пытается взломать замок и не ограничен во времени, не может правдоподобно потерпеть неудачу. Если ничто не мешает им пытаться снова и снова, пока игрок не выбросит достаточно высокий результат, чтобы добиться успеха, тогда вообще не утруждайте себя бросками. Персонаж, которому нужно взломать замок быстро или тихо , или не сломав хрупкие импровизированные отмычки, должен совершить проверку навыка и сделать бросок кости к20. Персонаж, который не заботится о скорости или шуме и использует правильные воровские инструменты, не заботится об этом.
 
 <Aside v="crimson">
-Примечание: «штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую первого человека, если взлом был шумный.
+	Примечание: «штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень
+	хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за
+	взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы
+	персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых
+	дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую
+	первого человека, если взлом был шумный.
 </Aside>
 
 ## 3: Обычно достаточно одного броска
 
 Очень редко бывает хорошей идеей требовать два броска для разрешения одной и той же задачи. Если кто-то пытается прокрасться мимо охранников, достаточно одного броска, даже если им нужно прокрасться мимо двух отдельных постов охраны. Если кто-то пытается забраться на дерево к птичьему гнезду до того, как птица вернется, даже если гнездо очень высокое, а дерево особенно высокое, одного броска будет достаточно.
 
-Руководство как, по какой причине, и  тогда, когда это нужно сделать еще один бросок, это не только искусство, но и наука. Один довольно простой пример — когда игроки могут видеть тикающие часы. Если они знают, что охрана приближается и на сколько с каждой неудачной попыткой взлома, или они знают, что темный ритуал должен произойти в полночь, что сейчас 23:37 и что каждая дополнительная попытка стоит одну драгоценную минуту, то даже при повторении проверок, броски костей остаются интересными.
+Руководство как, по какой причине, и тогда, когда это нужно сделать еще один бросок, это не только искусство, но и наука. Один довольно простой пример — когда игроки могут видеть тикающие часы. Если они знают, что охрана приближается и на сколько с каждой неудачной попыткой взлома, или они знают, что темный ритуал должен произойти в полночь, что сейчас 23:37 и что каждая дополнительная попытка стоит одну драгоценную минуту, то даже при повторении проверок, броски костей остаются интересными.
 
 ## 4: Просите проверки знаний в конце описания, когда это уместно
 
