--- a/src/content/posts/articles/enhanced-shields.mdx
+++ b/src/content/posts/articles/enhanced-shields.mdx
@@ -1,43 +1,42 @@
 ---
-title: "[Core d20 RPG] Расширенные правила по щитам"
-description: "Расширенные правила по щитам для Core d20 RPG"
-date: "2023-05-05"
-tags: 
-  - "5e"
-  - "core-d20-rpg"
-  - "e5e"
-  - "homebrew"
-  - "снаряжение"
-  - "щиты"
+title: '[Core d20 RPG] Расширенные правила по щитам'
+description: 'Расширенные правила по щитам для Core d20 RPG'
+date: '2023-05-05'
+tags:
+  - '5e'
+  - 'core-d20-rpg'
+  - 'e5e'
+  - 'homebrew'
+  - 'снаряжение'
+  - 'щиты'
 ---
-
 
 Эта статья посвящена правилам по щитам в рамках нашего проекта Core d20 RPG.
 
- **Легкие щиты**					
-| Название | Цена, зм	| Класс Защиты, КЗ	| Сила	| Вес, фунтов	| Свойства |
+**Легкие щиты**
+| Название | Цена, зм | Класс Защиты, КЗ | Сила | Вес, фунтов | Свойства |
 |---|---|---|---|---|---|
-| Кулачный щит	} 10	|-|	-|	2|	Парирование |
-|Небольшой щит	|5	|1	|-	|3	|Стабильный |
+| Кулачный щит } 10 |-| -| 2| Парирование |
+|Небольшой щит |5 |1 |- |3 |Стабильный |
 
-**Средние щиты**					
-| Название | Цена, зм	| Класс Защиты, КЗ	| Сила	| Вес, фунтов	| Свойства |
+**Средние щиты**
+| Название | Цена, зм | Класс Защиты, КЗ | Сила | Вес, фунтов | Свойства |
 |---|---|---|---|---|---|
-|Кавалерийский щит|	10|	2|	-|	6	|Верховая защита|
-|Пехотный щит|	10	|2	|11	|8|	Стена щитов|
+|Кавалерийский щит| 10| 2| -| 6 |Верховая защита|
+|Пехотный щит| 10 |2 |11 |8| Стена щитов|
 
-**Тяжелые щиты**					
-| Название | Цена, зм	| Класс Защиты, КЗ	| Сила	| Вес, фунтов	| Свойства |
+**Тяжелые щиты**
+| Название | Цена, зм | Класс Защиты, КЗ | Сила | Вес, фунтов | Свойства |
 |---|---|---|---|---|---|
-|Павиза	|20	|3	|13	|15	|Громоздкий, Размещаемый|
-|Башенный щит	|20|	3|	15	|22	|Громоздкий, Стена щитов|
-
+|Павиза |20 |3 |13 |15 |Громоздкий, Размещаемый|
+|Башенный щит |20| 3| 15 |22 |Громоздкий, Стена щитов|
 
 Для использования щита из определенной категории необходимо иметь навык владения доспехом соответствующей категории (т.е. тяжелые доспехи для башенного щита).
 Свойства или особенности, которые ограничены использованием доспехов определенной категории также ограничены использованием щитов определенной категории.
 Если вы используете щит с категорией более легкой нежели у доспеха вы считаетесь использующим доспех категории щита.
 
 ### Свойства щитов
+
 **Громоздкий.** Ношение этого щита накладывает помехи на проверки Скрытности и Акробатики, а также не позволяет вам протискиваться в тесное пространство или ездить верхом. Использование его в одной руке снижает вашу скорость на 10 футов. Переключение с использования этого щита в одной руке на две или наоборот считается взаимодействием с объектом. Если вы совершаете действие Уклонения, пока надет этот щит, вы получаете укрытие наполовину до начала вашего следующего хода.
 **Размещаемый.** Действием вы можете снять этот щит и установить его между собой и незанятым пространством в пределах пяти футов от вас. Затем он дает укрытие на три четверти существу вашего размера, стоящему прямо за ним. Это упругий деревянный предмет среднего размера, дающий ему 15 КЗ и 18 хитов, и его можно надеть бонусным действием. Существо может действием сбить щит, совершив успешную проверку Силы со КС 13 и сбив его с ног. Если он был сбит с ног, требуется действие, чтобы надеть его или вернуть на исходное место. Обыкновенный размещаемый щит уничтожается, когда его хиты достигают 0. Волшебный становится обычным на 1к6 часов.
 **Верховая защита.** КЗ, который дает этот щит, также применяется к вашему ездовому животному.
@@ -48,8 +47,8 @@ tags:
 **Шипованный щит.** Этот щит покрыт острыми шипами превращая его в неплохое оружие. Если вы используете его как импровизированное оружие он наносит 1к4 колющего урона. Если вы использовали свой щит, чтобы толкнуть существо, вы наносите этот колющий урон, как если бы попали атакой (не добавляя бонус характеристики). Шипованный щит не может нести на себе крепление для фонаря или эмблему.
 
 ### Блокирование и поломка щитов
+
 Использование щитов получает новую возможность – персонаж может реакцией заблокировать уже попавший удар, и в этом случае урон получает не персонаж, а щит, теряя хиты своей прочности. Если урон превосходит текущее количество хитов у щита, то разницу получает персонаж.
 У обычного щита (деревянного или окованного железом) 15 хитов и порог урона 5.
 
 Порог урона – если урон не превышает этого значения, то щит не получает урона вовсе, а если превышает, то получает полный.
-
