Add Socials to Footer; Set example articles to Draft

--- a/src/content/posts/articles/dummy.mdx
+++ b/src/content/posts/articles/dummy.mdx
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: Dummy
 description: Deemed hope but once shell. His weary there made her will he save glee. Are sadness blast heart but evil, with blazon and his and.
 date: Apr 1 2023
