--- a/src/content/posts/translations/солнце.mdx
+++ b/src/content/posts/translations/солнце.mdx
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: О попытках ученых приручить Солнце
 description: Тысячелетиями человечество зависит от Солнца, и сама система измерения времени существует благодаря ему. Солнце согревает и в буквальном смысле освещает нашу жизнь. И всех все устраивало, но в 1895 году один новозеландский энтомолог — его звали Джордж Хадсон — вдруг осознал, что ему этого мало.
 date: Apr 2 2023
