--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -16,13 +16,10 @@ description: 'D&D и Настольные Ролевые Игры – Стать
 Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом.
 Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор"
 
-Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
-
-Роман "JunkTurkey" Зверев
-
-Ира "Featon" Кузюр
-
-Станислав "Drakzar" Иванов
+- Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
+- Роман "JunkTurkey" Зверев
+- Ира "Featon" Кузюр
+- Станислав "Drakzar" Иванов
 
 <Aside>
 
