Proper MDX formatting

--- a/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
+++ b/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
@@ -12,37 +12,36 @@ tags:
 
 Проверки навыков часто плохо обрабатываются в настольных ролевых играх, что может привести к скучным результатам и восприятию навыков как неинтересного и утомительного способа разрешения конфликтов. Тем не менее, если вы прислушаетесь к этим пяти советам, то использовать проверки навыков на игре станет намного интереснее.
 
-## 1: Каждое действие игрока должно задавать вопрос или объявлять действие
+## 1. Каждое действие игрока должно задавать вопрос или объявлять действие
 
 Если игрок спрашивает, может ли он совершить проверку навыка в ситуации, не объявляя конкретное действие или не задавая конкретного вопроса, попросите его уточнить, что он на самом деле делает. Если кто-то хочет сделать бросок Убеждения у охранника, это, вероятно, будет неплохой идеей, но спросите их, что они на самом деле говорят. Резюме вместо дословного утверждения будет работать, если оно описывает действие (или задает вопрос, например: «Что я знаю о пожирателях разума?», который может потребовать проверки Магии, или вы может просто сообщить им информацию).
 
-## 2: Делайте бросок только тогда, когда есть шанс на успех, шанс на неудачу и риск или стоимость неудачи.
+## 2. Делайте бросок только тогда, когда есть шанс на успех, шанс на неудачу и риск или стоимость неудачи.
 
 Почти все возможно с достаточно высоким броском навыка, но многое невозможно с бонусами навыков, которые на самом деле есть у персонажей. Навык «Убеждение» — это не «Доминирование над человеком», а навык «Атлетика» — это не скорость взбирания, поэтому есть люди, которых нельзя убедить делать определенные вещи, и некоторые поверхности, на которые нельзя взобраться с проверкой навыка, доступной для игровых персонажей. Не бросайте кубики в ситуациях, когда успех невозможен даже при выпадении 20.
 
 Точно так же не требуйте бросков для простых задач. Персонаж 5e с экспертизой может иметь бонус до +17 и не сможет провалить проверку навыка КС 15, поэтому нет необходимости делать бросок. Персонаж, пытающийся завязать шнурки на собственной обуви, не может потерпеть неудачу, поэтому нет необходимости делать бросок. Менее интуитивно, персонаж, который пытается взломать замок и не ограничен во времени, не может правдоподобно потерпеть неудачу. Если ничто не мешает им пытаться снова и снова, пока игрок не выбросит достаточно высокий результат, чтобы добиться успеха, тогда вообще не утруждайте себя бросками. Персонаж, которому нужно взломать замок быстро или тихо , или не сломав хрупкие импровизированные отмычки, должен совершить проверку навыка и сделать бросок кости к20. Персонаж, который не заботится о скорости или шуме и использует правильные воровские инструменты, не заботится об этом.
 
 <Aside v="crimson">
-	Примечание: «штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень
-	хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за
-	взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы
-	персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых
-	дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую
-	первого человека, если взлом был шумный.
+
+Примечание: «штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую первого человека, если взлом был шумный.
+
 </Aside>
 
-## 3: Обычно достаточно одного броска
+## 3. Обычно достаточно одного броска
 
 Очень редко бывает хорошей идеей требовать два броска для разрешения одной и той же задачи. Если кто-то пытается прокрасться мимо охранников, достаточно одного броска, даже если им нужно прокрасться мимо двух отдельных постов охраны. Если кто-то пытается забраться на дерево к птичьему гнезду до того, как птица вернется, даже если гнездо очень высокое, а дерево особенно высокое, одного броска будет достаточно.
 
 Руководство как, по какой причине, и тогда, когда это нужно сделать еще один бросок, это не только искусство, но и наука. Один довольно простой пример — когда игроки могут видеть тикающие часы. Если они знают, что охрана приближается и на сколько с каждой неудачной попыткой взлома, или они знают, что темный ритуал должен произойти в полночь, что сейчас 23:37 и что каждая дополнительная попытка стоит одну драгоценную минуту, то даже при повторении проверок, броски костей остаются интересными.
 
-## 4: Просите проверки знаний в конце описания, когда это уместно
+## 4. Просите проверки знаний в конце описания, когда это уместно
 
 Если группа проникла в логово зловещего культа и обнаружила на полу загадочный символ, вам не нужно ждать, пока один из них спросит, узнают ли они его. Вы можете просто пойти дальше и попросить их бросить Магию, Религию или любой другой подходящий навык. Также рассмотрите возможность использования оценок пассивных знаний так же, как в 5e используются оценки пассивного восприятия. Это больше нужно отслеживать, но это означает, что вы можете вплести, какой персонаж знает что, непосредственно в описание, и игроки не будут предупреждены о наличии неизвестной информации из-за того, что они ее не знают.
 
-## 5: Дифференцируйте подходы по их последствиям
+## 5. Дифференцируйте подходы по их последствиям
 
 Подумайте об охраннике, которого партия должна обойти. Они решили не нападать на него, поэтому мы используем проверки навыков. Очевидными навыками для использования являются Обман, Убеждение, Запугивание или Скрытность. Вы можете просто решить, что этот сложность взаимодействия с этим охранником имеет КС 15, и позволить группе делать то, в чем они лучше всего, и надеяться на лучшее, но гораздо интереснее дать разным вариантам разные последствия. Если вы потерпите неудачу в **Запугивании** или **Обмане**, охранник может стать враждебным. Если вы потерпите неудачу в **Скрытности**, охранник почти наверняка станет враждебным. Попытка уговорить охранника, которого вы никогда не встречали, пропустить вас (**Убеждение**), будет намного сложнее. Вы можете добавить взятку, чтобы снизить сложность, но теперь есть вероятность, что он разозлится, если вы потерпите неудачу, а если вы добьетесь успеха, вам придется заплатить взятку. Даже такое относительно простое столкновение может быть намного интереснее, чем просто выбор соответствующего навыка с наибольшим бонусом.
+
+---
 
 Обсудить эти советы вы можете у нас в телеграмме или дискорде.
