--- a/src/content/posts/resources/using-mdx.mdx
+++ b/src/content/posts/resources/using-mdx.mdx
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: Справка по MDX
 description: В этом руководстве вы узнаете об основах формата MDX, дополнительном синтаксисе и компонентах.
 date: 'Jan 13 2023'
