--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -13,9 +13,7 @@ description: 'D&D и Настольные Ролевые Игры – Стать
 
 ## Наша команда
 
-Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом.
-Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор"
-
+- Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
 - Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
 - Роман "JunkTurkey" Зверев
 - Ира "Featon" Кузюр
