Add H2 and H3 anchors; Show "На этой странице" only when H2 > 0;

--- a/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
+++ b/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
@@ -16,7 +16,7 @@ tags:
 
 Если игрок спрашивает, может ли он совершить проверку навыка в ситуации, не объявляя конкретное действие или не задавая конкретного вопроса, попросите его уточнить, что он на самом деле делает. Если кто-то хочет сделать бросок Убеждения у охранника, это, вероятно, будет неплохой идеей, но спросите их, что они на самом деле говорят. Резюме вместо дословного утверждения будет работать, если оно описывает действие (или задает вопрос, например: «Что я знаю о пожирателях разума?», который может потребовать проверки Магии, или вы может просто сообщить им информацию).
 
-## 2. Делайте бросок только тогда, когда есть шанс на успех, шанс на неудачу и риск или стоимость неудачи.
+## 2. Делайте бросок только тогда, когда есть шанс на успех, шанс на неудачу и риск или стоимость неудачи
 
 Почти все возможно с достаточно высоким броском навыка, но многое невозможно с бонусами навыков, которые на самом деле есть у персонажей. Навык «Убеждение» — это не «Доминирование над человеком», а навык «Атлетика» — это не скорость взбирания, поэтому есть люди, которых нельзя убедить делать определенные вещи, и некоторые поверхности, на которые нельзя взобраться с проверкой навыка, доступной для игровых персонажей. Не бросайте кубики в ситуациях, когда успех невозможен даже при выпадении 20.
 
@@ -24,7 +24,9 @@ tags:
 
 <Aside v="crimson">
 
-Примечание: «штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую первого человека, если взлом был шумный.
+#### Примечание
+
+«Штраф за неудачу до тех пор, пока вы не потерпите неудачу навсегда» — не очень хорошее решение. Нет причин, по которым персонаж должен получать штраф -2 (или что-то подобное) за взлом одного и того же замка каждый раз, когда он пытается это сделать. Если вы не хотите, чтобы персонаж автоматически преуспел во взломе замков, поместите что-нибудь с другой стороны запертых дверей, что будет застигнуто врасплох тихо взломанным замком, или подготовьте атаку, ожидающую первого человека, если взлом был шумный.
 
 </Aside>
 
