Custom sidebar links for articles and singles

--- a/src/content/singles/homebrew.mdx
+++ b/src/content/singles/homebrew.mdx
@@ -3,7 +3,7 @@ title: Проекты Киборгов и Чародеев
 description: Проекты и материалы, созданные Киборгами и Чародеями
 ---
 
-## COre d20 RPG (Бывший E5E)
+## Core d20 RPG (Бывший E5E)
 
 Core d20 RPG - это проект по написанию набора правил совместимых с D&D 5e на основе SRD 5.1 и OGL материалов, который будет бесплатен для распространения.
 
