--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -1,6 +1,9 @@
 ---
 title: Проект
 description: 'D&D и Настольные Ролевые Игры – Статьи, Ресурсы, Материалы'
+links:
+- label: "TTG club"
+  href: https://ttg.club/
 ---
 
 ![](~assets/branding/banner.jpg)
