--- a/src/content/posts/articles/about-high-level-play.mdx
+++ b/src/content/posts/articles/about-high-level-play.mdx
@@ -1,7 +1,6 @@
-
 ---
-title: Мысли вслух. Про D&D на высоких уровнях
-description: небольшая заметка с личным взглядом на приключения высоких уровней в D&D
+title: 'Мысли вслух. Про D&D на высоких уровнях'
+description: 'небольшая заметка с личным взглядом на приключения высоких уровней в D&D'
 date: 14-05-2023
 tags:
   - 'D&D'
