--- a/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
+++ b/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
@@ -1,11 +1,11 @@
 ---
-title: `dmsguild.com - Однажды на постоялом дворе - перевод на украинский - Одного разу на постоялому дворі'
-description: `Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари`
+title: 'dmsguild.com - Однажды на постоялом дворе - перевод на украинский - Одного разу на постоялому дворі'
+description: 'Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари'
 date: 14-05-2023
 tags:
--`dmsguild`
--`перевод`
--`українська`
+-'dmsguild'
+-'перевод'
+-'українська'
 ---
 
 Наконец-то я доделал хоть в каком-то виде оформление сделанного Олей перевода бог знает когда и выложил его на dmsguild.com
