--- a/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
+++ b/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
@@ -1,12 +1,19 @@
 ---
 title: 'dmsguild.com - Однажды на постоялом дворе - перевод на украинский - Одного разу на постоялому дворі'
-description: 'Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари'
-date: 14-05-2023
+description: Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари
+date: '2023-05-14'
 tags:
--'dmsguild'
--'перевод'
--'українська'
+  - 'dmsguild'
+  - 'перевод'
+  - 'украинский'
+  - 'українська'
+links: 
+  - label: 'Core D20'
+    href: '/tags/cored20'  
+  - label: 'Другие советы'
+    href: '/tags/советы'  
 ---
+
 Наконец-то я доделал хоть в каком-то виде оформление сделанного Олей перевода бог знает когда и выложил его на dmsguild.com
 
 Собственно - ссылка на приключение https://www.dmsguild.com/product/437719/----?affiliate_id=759617
