--- a/src/content/posts/articles/martial-traditions.mdx
+++ b/src/content/posts/articles/martial-traditions.mdx
@@ -33,3 +33,4 @@ tags:
 
 [Скачать](/public/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.pdf)
 
+Обсудить этот материал вы можете у нас в телеграмме или на нашем дискорд сервере.
