--- a/src/content/posts/articles/martial-traditions.mdx
+++ b/src/content/posts/articles/martial-traditions.mdx
@@ -30,10 +30,11 @@ tags:
 Я выделил несколько классических боевых стилей, которые используются различными персонажами – от боя двумя кинжалами до боя древковым оружием. Поскольку эти школы боевых традиций связаны как правило с более ограниченным набором оружия, то мы выдали немного больше преимуществ для этих черт.
 Как по мне так помимо самих школ еще необходимо описать связь Школ Боевых Искусств с Оружейными техниками, Техниками боевых стилей, обычными воинскими приемами.
 Также в рамках плейтеста One D&D необходимо сравнить с Weapon Mastery. 
+
 <Aside v="crimson">
 [Скачать docx](https://cdn.discordapp.com/attachments/1054000436132196372/1103968905229242428/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.docx)
 
 [Скачать pdf](https://cdn.discordapp.com/attachments/1054000436132196372/1103968904864354334/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.pdf)
 </Aside>
 
-Обсудить этот материал вы можете у нас в телеграмме или на нашем дискорд сервере.
+Обсудить этот материал вы можете у нас в телеграмме или на нашем дискорд сервере. Или оставив комментарий на том сайте (сервере), где вы увидели опубликованную мной ссылку.
