--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -1,7 +1,7 @@
 ---
 title: Генератор заданий
 description: Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты
-date: '14.05.2023'
+date: '2023-05-14'
 tags:
 - 'mission'
 - 'quest'
