--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -360,3 +360,6 @@ Maguffin удивительно трудно получить
 Большие проблемы требуют другого навыка, которым вы обладаете.
 
 Получается, что квалифицированный специалист был вовсе не нужен
+
+
+Если у вас есть чем его дополнить или улучшить - напишите нам в дискорд или телеграмм, пожалуйста. А если он вам понравился уже - тем более напишите нам, чтобы мы знали, что смогли помочь вам.
