--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -201,7 +201,7 @@ tags:
 
 Однако настоящее приключение создается с помощью неожиданного поворота. Общие изменения вышеуказанных параметров перечислены ниже. Это ДОПОЛНИТЕЛЬНАЯ ЦЕННОСТЬ вашего задания.
 
-**Штурм/рейд**
+**1 Штурм/рейд**
 
 Вы должны атаковать и убить/забрать макгаффина
 
@@ -213,7 +213,7 @@ tags:
 
 Нападение имеет долгосрочные последствия
 
-**Извлечение (Добровольное/Принудительное)**
+**2 Извлечение (Добровольное/Принудительное)**
 
 Вы должны восстановить или вернуть макгаффин
 
@@ -231,7 +231,7 @@ tags:
 
 Maguffin удивительно трудно получить
 
-**Кража**
+**3 Кража**
 
 Вы должны украсть макгаффин
 
@@ -245,7 +245,7 @@ Maguffin удивительно трудно получить
 
 Нет сокровищ, которые можно было бы украсть
 
-**Награда за голову**
+**4 Награда за голову**
 
 Вам платят за убийство существа
 
@@ -259,7 +259,7 @@ Maguffin удивительно трудно получить
 
 Награда за существо очень высока, после убийства многих из них становятся известны последствия для экосистемы
 
-**Сопровождение**
+**5 Сопровождение**
 
 Вы должны сопровождать макгаффина до места назначения
 
@@ -269,7 +269,7 @@ Maguffin удивительно трудно получить
 
 Макгаффин не то, чем кажется, что делает доставку невозможной
 
-**Переворот**
+**6 Переворот**
 
 Вы должны свергнуть человека, находящегося у власти
 
@@ -283,7 +283,7 @@ Maguffin удивительно трудно получить
 
 Выполнение государственного переворота дестабилизирует регион, а его последствия меняют форму кампании.
 
-**Дуэль/Состязание**
+**7 Дуэль/Состязание**
 
 Вы должны победить противника
 
@@ -297,7 +297,7 @@ Maguffin удивительно трудно получить
 
 Соревнование не обязательно должно происходить из-за других событий, которые ставят вас и вашего оппонента на одну сторону.
 
-**Убийство**
+**8 Убийство**
 
 Вы должны убить цель
 
@@ -311,7 +311,7 @@ Maguffin удивительно трудно получить
 
 Убийство вашей цели вызывает больше проблем, чем решает
 
-**Саботаж**
+**9 Саботаж**
 
 Вы должны саботировать цель
 
@@ -327,7 +327,7 @@ Maguffin удивительно трудно получить
 
 Саботирование цели на самом деле затрудняет достижение ваших собственных целей.
 
-**Разведка**
+**10 Разведка**
 
 Вы должны исследовать область
 
@@ -337,7 +337,7 @@ Maguffin удивительно трудно получить
 
 Вы обнаруживаете хорошо нанесенную на карту область, которую намеревались исследовать, но обнаруживаете, что все карты очень неточны.
 
-**Тайны**
+**11 Тайны**
 
 Вы должны разгадать тайну
 
@@ -349,7 +349,7 @@ Maguffin удивительно трудно получить
 
 То, что кажется загадкой, явно не является при рассмотрении
 
-**Навык**
+**12 Навык**
 
 Ваши навыки или работа проверены
 
@@ -360,6 +360,7 @@ Maguffin удивительно трудно получить
 Большие проблемы требуют другого навыка, которым вы обладаете.
 
 Получается, что квалифицированный специалист был вовсе не нужен
+
 
 
 Если у вас есть чем его дополнить или улучшить - напишите нам в дискорд или телеграмм, пожалуйста. А если он вам понравился уже - тем более напишите нам, чтобы мы знали, что смогли помочь вам.
