--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -17,13 +17,21 @@ links:
 ## Наша команда
 
 - Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
-- Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила.
-- Роман "JunkTurkey" Зверев
-- Ира "Featon" Кузюр
-- Станислав "Drakzar" Иванов
+- Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила
+- Роман "JunkTurkey" Зверев, ГМ, программист
+- Ира "Featon" Кузюр, переводчик, 
+- Станислав "Drakzar" Иванов, ГМ, переводчик-любитель, бывший локальный координатор Лиги Авантюристов
+- Семен, ГМ, цифровой художник
+- Алексей "HellFell", ГМ и прекрасный человек
+
+## Как появилось сообщество?
+
+Изначально это был сервер для вождения кампании Гром Штормового Короля - который был создан 31.12.2016. После того как Антон очень активно стал водить приключения в рамках организованной кампании Лига Авантюристов на сервер начало приходить много людей. Ьлагодаря вождению на онлайн-конвентах эпических приключений - количество людей выросло еще больше.
+
+И понемногу стало приходить понимание, что этот сервер является чем-то большим, чем простая площадка для вождения игр.
 
 <Aside>
 
-Сейчас мы переводим несколько книг англоязычных авторов, продолажем работу над переводом SRD 5.1 и готовим свои материалы, которые расширяют базовое SRD.
+Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над переводом SRD 5.1 и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект Core d20 RPG
 
 </Aside>
