--- a/src/content/singles/homebrew.mdx
+++ b/src/content/singles/homebrew.mdx
@@ -3,6 +3,17 @@ title: Проекты Киборгов и Чародеев
 description: Проекты и материалы, созданные Киборгами и Чародеями
 ---
 
+## Подборки ресурсов
+
+**RPG RESOURCES COMPENDIUM**
+https://1drv.ms/w/s!Atcrhwwo1lBA1-JYy7A4n58SAwonWQ?e=fywbzI
+
+**Киборги и Чародеи - Ресурсы для мастеров**
+https://docs.google.com/document/d/1xhlWkdWvxc7a8Av0Z3pRM6knh8iDqLqe-UcmOnRcZXc/edit?usp=sharing
+
+**Киборги и Чародеи - Общие ресурсы**
+https://docs.google.com/document/d/1kTmUlLBEBorm8O4o6HnZEhUb3-_pazgNMUig6nkwr_w/edit?usp=sharing
+
 ## Core d20 RPG (Бывший E5E)
 
 Core d20 RPG - это проект по написанию набора правил совместимых с D&D 5e на основе SRD 5.1 и OGL материалов, который будет бесплатен для распространения.
