--- a/src/content/posts/articles/martial-traditions.mdx
+++ b/src/content/posts/articles/martial-traditions.mdx
@@ -32,9 +32,11 @@ tags:
 Также в рамках плейтеста One D&D необходимо сравнить с Weapon Mastery. 
 
 <Aside v="crimson">
-[Скачать docx](https://cdn.discordapp.com/attachments/1054000436132196372/1103968905229242428/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.docx)
 
-[Скачать pdf](https://cdn.discordapp.com/attachments/1054000436132196372/1103968904864354334/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.pdf)
+[Скачать docx](/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.docx)
+
+[Скачать pdf](/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.pdf)
+
 </Aside>
 
 Обсудить этот материал вы можете у нас в телеграмме или на нашем дискорд сервере. Или оставив комментарий на том сайте (сервере), где вы увидели опубликованную мной ссылку.
