--- a/src/content/posts/articles/martial-traditions.mdx
+++ b/src/content/posts/articles/martial-traditions.mdx
@@ -3,14 +3,13 @@ title: '[Core d20 RPG] Черты для щкол боевых искусств 
 description: Перевод моего англоязычного материала про черты для воинских классов, которые эмулируют изучение определенных способов сражаться - с типичным оружием и приемами.
 date: 05-14-2023
 tags:
-- 'martial tradition'
-- 'feat'
-- 'combat'
-- 'Core d20 RPG'
-- 'E5E'
-- 'homebrew'
-- 'русский'
+  - Черты
+  - Бой
+  - Core d20 RPG
+  - E5E
+  - Homebrew
 ---
+
 **Черты для школ боевых искусств с использованием боевых приемов и техник (большое хоумбрю) - перевод из Palant Notes to Combat**
 
 Перевод на русский язык того что вошло в **Palant Notes about Combat 1,2**
@@ -29,7 +28,7 @@ tags:
 
 Я выделил несколько классических боевых стилей, которые используются различными персонажами – от боя двумя кинжалами до боя древковым оружием. Поскольку эти школы боевых традиций связаны как правило с более ограниченным набором оружия, то мы выдали немного больше преимуществ для этих черт.
 Как по мне так помимо самих школ еще необходимо описать связь Школ Боевых Искусств с Оружейными техниками, Техниками боевых стилей, обычными воинскими приемами.
-Также в рамках плейтеста One D&D необходимо сравнить с Weapon Mastery. 
+Также в рамках плейтеста One D&D необходимо сравнить с Weapon Mastery.
 
 <Aside v="crimson">
 
