--- a/src/content/posts/articles/principles-of-game-design-and-projecting.mdx
+++ b/src/content/posts/articles/principles-of-game-design-and-projecting.mdx
@@ -3,10 +3,9 @@ title: Принципы игрового дизайна и процесса пр
 description: Принципы игрового дизайна и процесса проектирования
 date: 2023-05-14
 tags:
-- 'GM advice'
-- 'resource'
+  - Советы
+  - Ресурс
 ---
-
 
 ## Принципы игрового дизайна
 
@@ -30,4 +29,4 @@ tags:
 - Графика имеет смысл.
 - Знайте, для кого вы разрабатываете игру.
 
-Понравилось? Расскажи об этом в нашем телеграмме или на нашем дискорд сервере.  
+Понравилось? Расскажи об этом в нашем телеграмме или на нашем дискорд сервере.
