--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -2,8 +2,8 @@
 title: Проект
 description: 'D&D и Настольные Ролевые Игры – Статьи, Ресурсы, Материалы'
 links:
-- label: "TTG club"
-  href: https://ttg.club/
+  - label: 'TTG club'
+    href: https://ttg.club/
 ---
 
 ![](~assets/branding/banner.jpg)
@@ -19,7 +19,7 @@ links:
 - Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
 - Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила
 - Роман "JunkTurkey" Зверев, ГМ, программист
-- Ира "Featon" Кузюр, переводчик, 
+- Ира "Featon" Кузюр, переводчик,
 - Станислав "Drakzar" Иванов, ГМ, переводчик-любитель, бывший локальный координатор Лиги Авантюристов
 - Семен, ГМ, цифровой художник
 - Алексей "HellFell", ГМ и прекрасный человек
