--- a/src/content/posts/articles/enhanced-shields.mdx
+++ b/src/content/posts/articles/enhanced-shields.mdx
@@ -3,12 +3,12 @@ title: '[Core d20 RPG] Расширенные правила по щитам'
 description: 'Расширенные правила по щитам для Core d20 RPG'
 date: '2023-05-05'
 tags:
-  - '5e'
-  - 'core-d20-rpg'
-  - 'e5e'
-  - 'homebrew'
-  - 'снаряжение'
-  - 'щиты'
+  - 5E
+  - Core d20 RPG
+  - E5E
+  - Homebrew
+  - Снаряжение
+  - Щиты
 ---
 
 Эта статья посвящена правилам по щитам в рамках нашего проекта Core d20 RPG.
