--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -3,175 +3,114 @@ title: Генератор заданий
 description: Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты
 date: '2023-05-14'
 tags:
-- 'mission'
-- 'quest'
-- 'задание'
-- 'генератор'
-- 'resource'
+  - Задания
+  - Генератор
+  - Ресурс
 ---
 
 Инструмент который позволит создавать различные задания для вашей группы авантюристов.
 
- 
-
 ## Задания
 
-
-1. Нападение/рейд
-
- 1.1. Крепость
-
- 1.2. Город
-
- 1.3. Корабль
-
- 1.4. Засада
-
- 1.5. Стычка
-
-2. Извлечение (Добровольное/Принудительное)
-
- 2.1. Тюрьма
-
- 2.2. Тюремный лагерь
-
- 2.3. Частная тюрьма
-
- 2.4. Заключенный войны
-
- 2.5. От трудоустройства (корпорация/корона)
-
- 2.6. Природная катастрофа
-
- 2.7. От враждебных сил
-
-      2.7.1.Башня
-
-      2.7.2.Подземелье
-
-      2.7.3.Тюрьма
-
-      2.7.4.Лагерь
-
-      2.7.5.Здание
-
-3. Кража
-
- 3.1. Караван
-
- 3.2. Индивидуальный
-
- 3.3. Здание
-
- 3.4. Угон
-
- 3.5. Похищение
-
- 3.6. Пиратство (Перемещение товаров между транспортными средствами)
-
- 3.7. Спасение
-
-4. Награда за голову
-
- 4.1. Монстр
-
- 4.2. Индивидуальный
-
- 4.3. Отряд
-
- 4.4. Борьба с вредителями
-
- 4.5. Охота (в стиле сафари)
-
- 4.6. Охота (Коммерческая выгода)
-
- 4.6.1.Любой из вышеперечисленных может быть нужен живым или мертвым.
-
-5. Сопровождение
-
-5.1. Караван
-
- 5.1.1.Коммерческий
-
- 5.1.2.Паломничество
-
-5.2. Животное (крупный рогатый скот)
-
-5.3. Объект/Транспорт
-
-5.4. Сообщение/Посылка
-
-5.5. Персонал
-
-5.6. Контрабанда
-
-5.6.1.Товары
-
-5.6.2.Оружие
-
-5.6.3.Люди/Предметы
-
-6. Государственный переворот
-
-7. Дуэль/Соревнование
-
- 7.1. Спорт
-
- 7.2. Оружие
-
- 7.3. Один против одного
-
- 7.4. Команда против команды
-
- 7.5. Турнир+
-
- 7.6. Драка
-
-8. Заказное убийство
-
-9. Саботаж
-
-9.1. Поджог
-
-9.2. Разрушение
-
-9.3. Подкидывание доказательств
-
-9.4. Подделка
-
-10.Исследование
-
- 10.1. Область
-
- 10.1.1. Картографирование
-
- 10.1.2. Прокладка путей
-
- 10.2. Шпионаж
-
-10.2.1. Армия
-
-10.2.2. Правительство
-
-10.2.3. Население
-
-11.Тайны
-
- 11.1. Убийство
-
- 11.2. Исчезновение
-
- 11.3. Загадка/Головоломка
-
-12.Навыки (кулинария/кожевничество и т.д.)
-
- 12.1. Труд (батрак, разнорабочий)
-
- 12.2. Белый воротничок (оценщик, писец)
-
- 12.3. Черный рынок (Фальсификатор, Взломщик)
-
- 12.4. Услуги (Тестировщик доспеха, официант, швейцар и т. д.)
+1.  Нападение/рейд
+
+    1.  Крепость
+    1.  Город
+    1.  Корабль
+    1.  Засада
+    1.  Стычка
+
+2.  Извлечение (Добровольное/Принудительное)
+
+    1. Тюрьма
+    1. Тюремный лагерь
+    1. Частная тюрьма
+    1. Заключенный войны
+    1. От трудоустройства (корпорация/корона)
+    1. Природная катастрофа
+    1. От враждебных сил
+    1. Башня
+    1. Подземелье
+    1. Тюрьма
+    1. Лагерь
+    1. Здание
+
+3.  Кража
+
+    1. Караван
+    1. Индивидуальный
+    1. Здание
+    1. Угон
+    1. Похищение
+    1. Пиратство (Перемещение товаров между транспортными средствами)
+    1. Спасение
+
+4.  Награда за голову
+
+    1. Монстр
+    1. Индивидуальный
+    1. Отряд
+    1. Борьба с вредителями
+    1. Охота (в стиле сафари)
+    1. Охота (Коммерческая выгода)
+    1. Любой из вышеперечисленных может быть нужен живым или мертвым.
+
+5.  Сопровождение
+
+    1. Караван
+    1. Коммерческий
+    1. Паломничество
+    1. Животное (крупный рогатый скот)
+    1. Объект/Транспорт
+    1. Сообщение/Посылка
+    1. Персонал
+    1. Контрабанда
+    1. Товары
+    1. Оружие
+    1. Люди/Предметы
+
+6.  Государственный переворот
+
+7.  Дуэль/Соревнование
+
+    1. Спорт
+    1. Оружие
+    1. Один против одного
+    1. Команда против команды
+    1. Турнир
+    1. Драка
+
+8.  Заказное убийство
+
+9.  Саботаж
+
+    1. Поджог
+    1. Разрушение
+    1. Подкидывание доказательств
+    1. Подделка
+
+10. Исследование
+
+    1. Область
+    1. Картографирование
+    1. Прокладка путей
+    1. Шпионаж
+    1. Армия
+    1. Правительство
+    1. Население
+
+11. Тайны
+
+    1. Убийство
+    1. Исчезновение
+    1. Загадка/Головоломка
+
+12. Навыки (кулинария/кожевничество и т.д.)
+
+    1. Труд (батрак, разнорабочий)
+    1. Белый воротничок (оценщик, писец)
+    1. Черный рынок (Фальсификатор, Взломщик)
+    1. Услуги (Тестировщик доспеха, официант, швейцар и т. д.)
 
 ## Заказчик задания
 
@@ -181,15 +120,11 @@ tags:
 
 2. Персонаж
 
-2.1. Торговец
-
-2.2. Дворянин
-
-2.3. Волшебник/Ученый/Алхимик
-
-2.4. Политик
-
-2.5. Государственный служащий
+   1. Торговец
+   1. Дворянин
+   1. Волшебник/Ученый/Алхимик
+   1. Политик
+   1. Государственный служащий
 
 3. Повстанцы
 
@@ -201,7 +136,7 @@ tags:
 
 Однако настоящее приключение создается с помощью неожиданного поворота. Общие изменения вышеуказанных параметров перечислены ниже. Это ДОПОЛНИТЕЛЬНАЯ ЦЕННОСТЬ вашего задания.
 
-**1 Штурм/рейд**
+### 1. Штурм/рейд
 
 Вы должны атаковать и убить/забрать макгаффина
 
@@ -213,7 +148,7 @@ tags:
 
 Нападение имеет долгосрочные последствия
 
-**2 Извлечение (Добровольное/Принудительное)**
+### 2. Извлечение (Добровольное/Принудительное)
 
 Вы должны восстановить или вернуть макгаффин
 
@@ -231,7 +166,7 @@ tags:
 
 Maguffin удивительно трудно получить
 
-**3 Кража**
+### 3. Кража
 
 Вы должны украсть макгаффин
 
@@ -245,7 +180,7 @@ Maguffin удивительно трудно получить
 
 Нет сокровищ, которые можно было бы украсть
 
-**4 Награда за голову**
+### 4. Награда за голову
 
 Вам платят за убийство существа
 
@@ -259,7 +194,7 @@ Maguffin удивительно трудно получить
 
 Награда за существо очень высока, после убийства многих из них становятся известны последствия для экосистемы
 
-**5 Сопровождение**
+### 5. Сопровождение
 
 Вы должны сопровождать макгаффина до места назначения
 
@@ -269,7 +204,7 @@ Maguffin удивительно трудно получить
 
 Макгаффин не то, чем кажется, что делает доставку невозможной
 
-**6 Переворот**
+### 6. Переворот
 
 Вы должны свергнуть человека, находящегося у власти
 
@@ -283,7 +218,7 @@ Maguffin удивительно трудно получить
 
 Выполнение государственного переворота дестабилизирует регион, а его последствия меняют форму кампании.
 
-**7 Дуэль/Состязание**
+### 7. Дуэль/Состязание
 
 Вы должны победить противника
 
@@ -297,7 +232,7 @@ Maguffin удивительно трудно получить
 
 Соревнование не обязательно должно происходить из-за других событий, которые ставят вас и вашего оппонента на одну сторону.
 
-**8 Убийство**
+### 8. Убийство
 
 Вы должны убить цель
 
@@ -311,7 +246,7 @@ Maguffin удивительно трудно получить
 
 Убийство вашей цели вызывает больше проблем, чем решает
 
-**9 Саботаж**
+### 9. Саботаж
 
 Вы должны саботировать цель
 
@@ -327,7 +262,7 @@ Maguffin удивительно трудно получить
 
 Саботирование цели на самом деле затрудняет достижение ваших собственных целей.
 
-**10 Разведка**
+### 10. Разведка
 
 Вы должны исследовать область
 
@@ -337,7 +272,7 @@ Maguffin удивительно трудно получить
 
 Вы обнаруживаете хорошо нанесенную на карту область, которую намеревались исследовать, но обнаруживаете, что все карты очень неточны.
 
-**11 Тайны**
+### 11. Тайны
 
 Вы должны разгадать тайну
 
@@ -349,7 +284,7 @@ Maguffin удивительно трудно получить
 
 То, что кажется загадкой, явно не является при рассмотрении
 
-**12 Навык**
+### 12. Навык
 
 Ваши навыки или работа проверены
 
@@ -359,7 +294,4 @@ Maguffin удивительно трудно получить
 
 Большие проблемы требуют другого навыка, которым вы обладаете.
 
-Получается, что квалифицированный специалист был вовсе не нужен
-
-
-Если у вас есть чем его дополнить или улучшить - напишите нам в дискорд или телеграмм, пожалуйста. А если он вам понравился уже - тем более напишите нам, чтобы мы знали, что смогли помочь вам.
+Получается, что квалифицированный специалист был вовсе не нужен.
