--- a/src/content/posts/resources/using-mdx.mdx
+++ b/src/content/posts/resources/using-mdx.mdx
@@ -2,11 +2,11 @@
 draft: true
 title: Справка по MDX
 description: В этом руководстве вы узнаете об основах формата MDX, дополнительном синтаксисе и компонентах.
-date: 'Jan 13 2023'
+date: Jan 13 2023
 cover: ~assets/covers/might-and-magic.webp
 author: Алекс «Phenomen» Василенко
 tags:
-  - tutorial
+  - Техническое
 ---
 
 **MDX** — это формат документов, основанный на популярном **Markdown** и расширенный возможностями **JSX** (JavaScript eXpressions), вроде возможности использовать JavaScript выражения и импортировать компоненты.
