--- a/src/content/posts/articles/cored-20-rpg-feats-1.mdx
+++ b/src/content/posts/articles/cored-20-rpg-feats-1.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Core d20 RPG - Черты'
+title: '[Core d20 RPG] Черты, часть 1'
 description: 'Две черты для Core d20 RPG - Написание свитков и Лучник заклинатель'
 date: 2023-05-15
 tags:
