--- a/src/content/posts/articles/cored-20-rpg-feats-1.mdx
+++ b/src/content/posts/articles/cored-20-rpg-feats-1.mdx
@@ -6,7 +6,7 @@ tags:
 - 'Core d20 RPG'
 - 'E5E'
 - 'Черты'
-- 'homebrew'
+- 'Homebrew'
 ---
 
 ## Черты, связанные с сотворением заклинаний
@@ -17,7 +17,7 @@ tags:
 
 **Требование:** Способность сотворять хотя бы одно заклинание 1-го круга или выше, владение длинным или коротким луком.
 
-Вы можете действием вложить в стрелу, которую держите, эффект заклинания 1-го круга или выше. Вы сотворяете заклинание как обычно, но эффект заклинания не проявляется до тех пор, пока стрела не будет использована в атаке. Вы можете вложить только заклинание, воздействующее на одно существо, или заклинание, воздействующее на область, такую как сфера, облако или цилиндр. Стрела удерживает эффект заклинания до конца вашего следующего длинного отдыха или до тех пор, пока она не будет использована в успешной атаке.
+Вы можете действием вложить в стрелу, которую держите, эффект заклинания 1-го круга или выше. Вы сотворяете заклинание как обычно, но эффект заклинания не проявляется до тех пор, пока стрела не будет использована в атаке. Вы можете вложить только заклинание, воздействующее на одно существо, или заклинание, воздействующее на область, такую как сфера, куб, конус или цилиндр. Стрела удерживает эффект заклинания до конца вашего следующего длинного отдыха или до тех пор, пока она не будет использована в успешной атаке.
 
 Если вы сотворяете заклинание, воздействующее на одно существо, то в следующий раз, когда стрела, усиленная этим заклинанием, попадает в существо, атака наносит урон как обычно, а затем применяется эффект заклинания к цели.
 
